force-app/main/default/objects/CWS_Distributor_Reseller__c/CWS_Distributor_Reseller__c.object-meta.xml
<CustomObject>
    <description>This is the Object to maintain the Relationship between the Distributor/Reseller and the End Customer Account.</description>
    <label>Distributor/Reseller</label>
    <nameField>
        <label>Distributor/Reseller  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors/Resellers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>