force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Account__c.field-meta.xml
<CustomField>
    <fullName>CWS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account of the End Customer/Customer Account linked to the Distributor/Reseller.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributors/Resellers</relationshipLabel>
    <relationshipName>Distributors_Resellers</relationshipName>
    <type>Lookup</type>
</CustomField>