force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Active__c.field-meta.xml
<CustomField>
    <fullName>CWS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field derives the share access of Acoount,Contact,Opportunity, Quote objects to associated Distributor</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>