force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category__c</fullName>
    <description>Category of the Products.</description>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Category</valueSetName>
    </valueSet>
</CustomField>