force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Distributor_Community_Group__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_Community_Group__c</fullName>
    <label>Distributor Community Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CWS_Distributor_for_Community_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trust X Alliance</fullName>
            </value>
            <value>
                <fullName>SMB Alliance</fullName>
            </value>
            <value>
                <fullName>Tech Select</fullName>
            </value>
            <value>
                <fullName>Varnex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>