force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Distributor_for_Community_Group__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_for_Community_Group__c</fullName>
    <label>Distributor for Community Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingram Micro</fullName>
            </value>
            <value>
                <fullName>TechData</fullName>
            </value>
            <value>
                <fullName>Synnex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>