force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Distributor_ResellerAcc__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor_ResellerAcc__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Distributor/Reseller Account</description>
    <label>Distributor/Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributors/Resellers (Distributor/Reseller Account)</relationshipLabel>
    <relationshipName>Distributors_Resellers1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>