force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Fulfillment_Type__c</fullName>
    <description>This Field Defines whether a new deal has been Registered or the it is only Fulfillment of the Deal based on the Distributor/Reseller.</description>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Deal Reg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>