force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_isReactive__c.field-meta.xml
<CustomField>
    <fullName>CWS_isReactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReactive</label>
    <type>Checkbox</type>
</CustomField>