force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>