force-app/main/default/objects/CWS_Distributor_Reseller__c/fields/CWS_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Type__c</fullName>
    <description>Type of the Account</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>