force-app/main/default/objects/CWS_Distributor_Reseller__c/validationRules/CWS_Restrict_Disty_Rep_Edit_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Restrict_Disty_Rep_Edit_Access</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c),
$Profile.Name  = &quot;CWS_Partner_Community_User&quot;, 
OR(
ISCHANGED(CWS_Distributor_ResellerAcc__c),
ISCHANGED(Name)
)
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the Name and Disty/Reseller Account</errorMessage>
</ValidationRule>